--- a/package.xml
+++ b/package.xml
@@ -52,14 +52,17 @@
   <build_depend>roscpp</build_depend>
   <build_depend>drive_ros_msgs</build_depend>
   <build_depend>pcl_ros</build_depend>
+  <build_depend>laser_geometry</build_depend>
   <build_depend>libpcl-all-dev</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>drive_ros_msgs</build_export_depend>
   <build_export_depend>pcl_ros</build_export_depend>
   <build_export_depend>libpcl-all-dev</build_export_depend>
+  <build_export_depend>laser_geometry</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>drive_ros_msgs</exec_depend>
   <exec_depend>pcl_ros</exec_depend>
+  <exec_depend>laser_geometry</exec_depend>
   <exec_depend>libpcl-all</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
